# drnuke-bean

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ConfigIBKR_example.py  ConfigPFEC_example.py  README.md  ZKB_runner_example.py  environment.yml  ledger_plugins_example.bean  local_config.example.py  pipeline_secrets.example.py  pyproject.toml  pyrightconfig.json.example  run_imports.py  run_imports_pipeline.example.py  run_post_checks.example.py  transaction_fixes_example.py
src/drnukebean/importer/: PFCC.py  PFG.py  finpension.py  halbtaxplus.py  ibkr.py  ibkr_flexquery.py  pfg.py  sbb.py  util.py  zkb_camt.py  zkb_ebics.py
src/drnukebean/pipeline/: runner.py
src/drnukebean/plugins/: amortize.py  budgeting.py  partner.py  recurring.py  spreading.py  tax_forecast.py  unrealized_gains.py
src/drnukebean/prices/: split.py
tests/: conftest.py
tests/fixtures/finpension/: finpension_S3a_Portfolio1_fixture.csv
tests/fixtures/ibkr/: flexquery.xml  not_flexquery.xml  sample_flexquery_response.xml  valid_flexquery.xml  wrong_queryname.xml
tests/fixtures/pfg/: statement.csv
tests/fixtures/sbb/: sbb_fixture.csv
tests/fixtures/unrealized_gains/: hool_buy_sell.bean
tests/fixtures/zkb/: camt053.xml
tests/importer/: test_finpension.py  test_ibkr.py  test_ibkr_flexquery.py  test_ibkr_integration.py  test_pfg.py  test_sbb.py  test_zkb_camt.py  test_zkb_ebics.py
tests/pipeline/: test_e2e_ibkr.py  test_e2e_sbb.py  test_e2e_zkb.py  test_runner.py
tests/plugins/: test_amortize.py  test_unrealized_gains.py
